Jump to Recipe no longer starts recipe under top nav

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -193,6 +193,11 @@
 	}
 }
 
+.take-me-anchor {
+	position: absolute;
+	top: -#{$nav-height};
+}
+
 .cta {
 	text-align: center;
 	padding: 50px 0 0 0;
