--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,3 +4,5 @@ $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 900px)";
 
 $light-grey: #999;
+
+$nav-height: 68px;
